@@ -482,6 +482,9 @@
 #define DARKLEVEL 6
 #define OREELAIR 9
 
+#define RECTANGLE 1
+#define ROUNDCORNERS 2
+
 ; /* this line must be here */
 
 
